--- a/css/nl.css
+++ b/css/nl.css
@@ -150,6 +150,13 @@ img {
   max-height: 100%;
 }
 
+/* OTHER */
+
+.screamer {
+  font-size: 10rem;
+  font-weight: 300;
+}
+
 @media (max-width: 700px) {
 	#mainGrid {
 		column-count: 2;
