--- a/css/pages.css
+++ b/css/pages.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Flex&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,300,100');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css');
+
 a, a:hover, .slats > a:hover {
   color: #da2c43!important;
 }
